fixed various small layout bugs

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -35,6 +35,8 @@ ul {
   --contrast: var(--blue);
   --the-lightest: var(--white);
 
+  /* sizes */
+
   --content-max-width: 1110px;
 }
 
@@ -152,6 +154,7 @@ footer > .inner {
 
 img {
   display: block;
+
   filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
@@ -223,12 +226,16 @@ a.more:link {
 }
 
 a.more:visited {
-  background-color: var(--primary-additional);
+  color: var(--white);
+
+  background-color: var(--primary);
 }
 
 a.more:hover,
 a.more:active,
 a.more:focus {
+  color: var(--white);
+
   background-color: var(--primary-additional);
 }
 
@@ -262,25 +269,35 @@ a.more:focus {
   max-width: 100%;
 
   border: 0;
+
   filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
 }
 
 /* SECTION NAVIGATION */
 
-nav .inner {
-  display: grid; 
-  grid-column-gap: 30px;
+#navigation .inner {
+  display: grid;
+
   grid-row-gap: 20px;
+  grid-column-gap: 30px;
   grid-template-columns: repeat(3, 1fr);
 
   margin-top: 100px;
 }
 
-nav h2 {
-  margin: 0;
+#navigation h3 {
+  margin-bottom: 10px;
+}
+
+#navigation h2,
+#navigation p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .number {
+  display: block;
+  margin-top: 6px;
   margin-bottom: 40px;
 }
 
@@ -301,14 +318,15 @@ nav h2 {
 .nav-box:hover,
 .nav-box:hover h3 {
   color: var(--white);
+
   background-color: var(--primary);
 }
 
 /* SECTIONS COMMON */
 
 .box h2 {
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 .lead {
@@ -316,7 +334,7 @@ nav h2 {
   padding: 0;
 }
 
-p.intro{
+p.intro {
   margin-top: 20px;
 }
 
@@ -371,12 +389,14 @@ input[type="email"] {
 
 .send-email button {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+
   width: 70px;
   height: 50px;
 
   border: 0;
+
   cursor: pointer;
 }
 
@@ -497,8 +517,9 @@ footer .container {
 
 /* ADDITIONAL CLASSES FOR COLORS */
 ::placeholder,
-::-ms-input-placeholder  {
+::-ms-input-placeholder {
   color: var(--grey-light);
+
   opacity: 1;
 }
 
